@@ -4,6 +4,9 @@
 /files/*
 /cache
 
+/vendor
+/.ddev
+
 # ** Only works in OSs that support newer versions of fnmatch (Bash 4+)
 /sites/default/**/files
 /sites/default/**/private
